--- a/a.html
+++ b/a.html
@@ -16,13 +16,19 @@
   </header>
   <section>
     <header>
-      <h2>Tipsrundan #11</h2>
+      <h1>Tipsrundan #11</h1>
       <p>This is our 0th issue of Tipsrundan. Welcome to the jungle baby!</p>
     </header>
   </section>
   <main>
+    <hr>
     <section>
-      <h3>Regional</h3>
+      <header>
+        <h2>Regional</h2>
+      </header>
+      <aside>
+        <p><b>Some Regional News For Ya'll</b><br><small>This is some very important news that you all want to get!</small></p>
+<a href="A non-required URL to the article" target="blank">Read more</a></aside>
     </section>
   </main>
 </div>
