Added the URL to afry-south github io for HTML version!

--- a/2020-09-01-inline.html
+++ b/2020-09-01-inline.html
@@ -388,6 +388,7 @@ blockquote footer {
     <header style="margin: 0 auto;max-width: 1080px;padding: 1rem 0.5rem;text-align: center;padding-top: 0;width: 100%;">
         <h1 style="line-height: 150%;">Tipsrundan #18</h1>
         <p style="margin: 0.75rem 0;padding: 0;">Welcome back everybody! This is the first Tipsrundan post-summer 2020 and we're happy to be here! For everyone who's new at AFRY - welcome! We need your help to keep Tipsrundan going, if we want a diverse newsletter we need everyones inspiration and ideas!</p>
+        <p style="margin: 0.75rem 0;padding: 0;">As always, read the pretty version <a href="https://afry-south.github.io/tipsrundan/Tipsrundan_18.html" style="color: #920de9;font-weight: bold;text-decoration: none;">here</a></p>
     </header>
 </section>
 <main style="margin: 0 auto;max-width: 1080px;padding: 1rem 0.5rem;">
