--- a/2020-09-01.html
+++ b/2020-09-01.html
@@ -388,6 +388,7 @@ blockquote footer {
       <header>
         <h1>Tipsrundan #18</h1>
         <p>Welcome back everybody! This is the first Tipsrundan post-summer 2020 and we're happy to be here! For everyone who's new at AFRY - welcome! We need your help to keep Tipsrundan going, if we want a diverse newsletter we need everyones inspiration and ideas!</p>
+        <p>As always, read the pretty version <a href="https://afry-south.github.io/tipsrundan/Tipsrundan_18.html">here</a></p>
       </header>
     </section>
     <main>
