--- a/2021-01-26-tipsrundan-27.html
+++ b/2021-01-26-tipsrundan-27.html
@@ -392,9 +392,13 @@ blockquote footer {
     <section style="display: flex;flex-wrap: wrap;justify-content: center;">
       <header style="margin: 0 auto;max-width: 1080px;padding: 1rem 0.5rem;text-align: center;padding-top: 0;width: 100%;">
         <h1 style="line-height: 150%;">Tipsrundan #27</h1>
-        <p style="margin: 0.75rem 0;padding: 0;">Welcome to the first Tipsrunda Tuesday of 2021! </p>
-        <p style="margin: 0.75rem 0;padding: 0;">As always, read the pretty version <a href="https://afry-south.github.io/tipsrundan/2021-01-26-tipsrundan-27" style="color: #920de9;font-weight: bold;text-decoration: none;">here</a></p>
+        <p style="margin: 0.75rem 0;padding: 0;">Welcome to the first Tipsrunda Tuesday of 2021! <br>As always, read the pretty version <a href="https://afry-south.github.io/tipsrundan/2021-01-26-tipsrundan-27" style="color: #920de9;font-weight: bold;text-decoration: none;">here</a></p>
       </header>
+    </section>
+    <section style="display: flex;flex-wrap: wrap;justify-content: center;">
+      <aside style="border: 1px solid #e9e9e9;border-radius: 5px;box-shadow: 2px 2px 10px #f4f4f4;margin: 0.5rem;padding: 1.25rem;width: 460px;"><b>🗳️ Tipsboxen</b><br>
+        <p style="margin: 0.75rem 0;padding: 0;">Email:<a href="mailto:it.south.competence@afconsult.com?subject=Tipsbox&amp;body=Title%0D%0ASummary%0D%0ALink" style="color: #920de9;font-weight: bold;text-decoration: none;"> 📧</a> - GitHub: <a href="https://github.com/afry-south/afry-south.github.io/issues/1" target="_blank" style="color: #920de9;font-weight: bold;text-decoration: none;"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="24px" style="max-width: 100%;"></a><br>All tips and recommendations are appreciated! 🙏</p>
+      </aside>
     </section>
     <main style="margin: 0 auto;max-width: 1080px;padding: 1rem 0.5rem;">
       <hr style="background-color: #e9e9e9;border: none;height: 1.5px;margin: 1rem 0;">
@@ -439,7 +443,7 @@ blockquote footer {
     <footer style="margin: 0 auto;max-width: 1080px;padding: 1rem 0.5rem;">
       <hr style="background-color: #e9e9e9;border: none;height: 1.5px;margin: 1rem 0;">
       <section style="display: flex;flex-wrap: wrap;justify-content: center;">
-        <p style="margin: 0.75rem 0;padding: 0;"><b>Thank you for this time see you in two weeks</b><br>Hampus &amp; Hassan</p>
+        <p style="margin: 0.75rem 0;padding: 0;"><b>Thank you for this time see you in two weeks</b><br>Hampus</p>
       </section>
     </footer>
   </body>
