--- a/2021-10-05-tipsrundan-42.html
+++ b/2021-10-05-tipsrundan-42.html
@@ -18,7 +18,7 @@
     <div class="section" style="width: 100%;justify-content: center;">
       <div class="aside" style="justify-content: center;text-align: start;padding: 0.5rem;">
         <p style="text-align: center;width: 75%;margin: 0.75rem auto;padding: 0;">👋<i> Welcome to Tipsrundan! <br>Free online IDEs, PostgreSQL hickups &amp; sustainable lab-grown ☕ is just a few of the key articles for today!</i></p>
-<a href="https://afry-south.github.io/tipsrundan/2021-10-05-tipsrundan-42" style="margin: 0.5rem auto;color: #920de9;font-weight: bold;text-decoration: none;"><button style="border-radius: 5px;font-size: medium;display: block;font-weight: bold;margin: 0.5rem auto;padding: 1rem 2rem;background-color: #2b2d42;border: 2px solid #d99ae;color: #fff;">Take me to pretty version!</button></a></div>
+<a href="https://afry-south.github.io/tipsrundan/42" style="margin: 0.5rem auto;color: #920de9;font-weight: bold;text-decoration: none;"><button style="border-radius: 5px;font-size: medium;display: block;font-weight: bold;margin: 0.5rem auto;padding: 1rem 2rem;background-color: #2b2d42;border: 2px solid #d99ae;color: #fff;">Take me to pretty version!</button></a></div>
     </div>
     <hr style="background-color: #e9e9e9;border: none;height: 1.5px;width: 50%;margin: 0.5rem auto;">
     <h1 style="margin: 0;text-align: center;line-height: 150%;">Supertipset 💡</h1>
